@@ -12,7 +12,7 @@ build: build-stamp
 build-stamp: configure-stamp 
 	dh_testdir
 	for builddir in $(BUILDDIRS); do \
-	  (cd $$builddir && xbuild) || exit 1; \
+	  (cd $$builddir && xbuild /p:Configuration=Release) || exit 1; \
 	done
 	touch build-stamp
 
@@ -21,6 +21,7 @@ clean:
 	dh_testroot
 	rm -f build-stamp configure-stamp
 	rm -rf $(TARGET)
+	# This was failing to make xbuild 1.9.1+dfsg-4ubuntu2 do anything useful
 	for builddir in $(BUILDDIRS); do \
 	  (cd $$builddir && echo "**NOT doing" xbuild /t:Clean); \
 	done
@@ -32,8 +33,8 @@ install: build
 	dh_testroot
 	dh_clean -k 
 	dh_installdirs
-	install -m 755 $(CURDIR)/openBVE/OpenBve/bin/Debug/OpenBve.exe $(TARGET)/usr/lib/openbve/
-	install -m 644 $(CURDIR)/openBVE/OpenBve/bin/Debug/OpenBve.exe.mdb $(TARGET)/usr/lib/openbve/
+	install -m 755 $(CURDIR)/openBVE/OpenBve/bin/Release/OpenBve.exe $(TARGET)/usr/lib/openbve/
+	install -m 644 $(CURDIR)/openBVE/OpenBve/bin/Release/OpenBve.exe.mdb $(TARGET)/usr/lib/openbve/
 	install -m 755 -T $(CURDIR)/debian/openbve.wrapper $(TARGET)/usr/games/openbve
 
 binary-arch:
@@ -52,8 +53,9 @@ binary-indep: build install
 	dh_installman
 	dh_fixperms
 	dh_installdeb
-	dh_makeclilibs -i -V
+	#dh_makeclilibs -i -V
 	#dh_installcligac -i
+	dh_clistrip
 	dh_clideps -i
 	dh_clideps -d
 	dh_compress
